--- a/index.html
+++ b/index.html
@@ -17,7 +17,73 @@
       </div>
 
       <div class="news">
+        <h2>News</h2>
+        <ul>
 
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+          <li>
+            18-02-2020
+            <ul>
+              <li>added this</li>
+              <li>added that</li>
+            </ul>
+            <br>
+          </li>
+
+        </ul>
       </div>
 
     </div>
